syntax = "proto3";
package irismod.nft;

import "gogoproto/gogo.proto";

option go_package = "github.com/irisnet/irismod/modules/nft/types";
option (gogoproto.goproto_getters_all) = false;

// MsgIssueDenom defines an SDK message for creating a new denom.
message MsgIssueDenom {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string schema = 3;
    string sender = 4;
}

// MsgTransferNFT defines an SDK message for transferring an NFT to recipient.
message MsgTransferNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom = 2;
    string name = 3;
    string uri = 4 [(gogoproto.customname) = "URI"];
    string data = 5;
    string sender = 6;
    string recipient = 7;
}

// MsgEditNFT defines an SDK message for editing a nft.
message MsgEditNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom = 2;
    string name = 3;
    string uri = 4 [(gogoproto.customname) = "URI"];
    string data = 5;
    string sender = 6;
}

// MsgMintNFT defines an SDK message for creating a new NFT.
message MsgMintNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom = 2;
    string name = 3;
    string uri = 4 [(gogoproto.customname) = "URI"];
    string data = 5;
    string sender = 6;
    string recipient = 7;
}

// MsgBurnNFT defines an SDK message for burning a NFT.
message MsgBurnNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom = 2;
    string sender = 3;
}

// BaseNFT defines a non fungible token.
message BaseNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string uri = 3 [(gogoproto.customname) = "URI"];
    string data = 4;
    string owner = 5;
}

// Denom defines a type of NFT.
message Denom {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string schema = 3;
    string creator = 4;
}

message IDCollection {
    option (gogoproto.equal) = true;

    string denom = 1;
    repeated string ids = 2;
}

message Owner {
    option (gogoproto.equal) = true;

    string address = 1;
    repeated IDCollection id_collections = 2 [(gogoproto.moretags) = "yaml:\"idcs\"", (gogoproto.customname) = "IDCollections", (gogoproto.nullable) = false];
}

message Collection {
    option (gogoproto.equal) = true;

    Denom denom = 1 [(gogoproto.nullable) = false];
    repeated BaseNFT nfts = 2 [(gogoproto.customname) = "NFTs", (gogoproto.nullable) = false];
}